<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">RemoteStick</string>
<string name="no_devices">No devices found for controller</string>
<string name="new_device">New device</string>
<string name="refresh">Refresh</string>
<string name="name">Name</string>
<string name="model">Model</string>
<string name="protocol">Protocol</string>
<string name="choose_type">Choose type</string>
<string name="done">Done</string>
<string name="cancel">Cancel</string>
<string name="nexa_codeswitch">NEXA/codeswitch</string>
<string name="nexa_selflearning_switch">NEXA/Selflearning switch</string>
<string name="add_controller">Add Controller</string>
<string name="edit_controller">Edit Controller</string>
<string name="remove_controller">Remove Controller</string>
<string name="add_device">Add Device</string>
<string name="refresh_devices">Refresh</string>
<string name="delete_device">Delete</string>
<string name="modify_device">Modify</string>
</resources>
